added zod validation frontend

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
+
         <!-- Needed for Webflux types -->
         <dependency>
             <groupId>io.projectreactor</groupId>
